--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,11 @@
     "react-bootstrap": "^1.5.2",
     "react-dom": "^17.0.2",
     "react-modal-hook": "^3.0.0",
+    "react-redux": "^7.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.0",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0",
     "terser-webpack-plugin": "^5.1.1",
     "web-vitals": "^1.1.0"
   },
